cabal-version:      3.0
name:               tea-app
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TEA
    build-depends:    base ^>=4.18.3.0
                    , time
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , tea-app
    hs-source-dirs:   app

    default-language: Haskell2010
